Fixes site baseurl, fixes some links, and adjusts posts.

--- a/_posts/2014-05-26-Monday.md
+++ b/_posts/2014-05-26-Monday.md
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: Monday, May 26, 2014 
 group: "meeting note"
 ---
@@ -7,9 +7,6 @@ group: "meeting note"
 <div id="content" class="column">
     <div class="section">
         <a id="main-content"></a>
-        <h1 class="title" id="page-title">
-            Monday, May 26, 2014        
-        </h1>
         <div class="region region-content">
             <div id="block-system-main" class="block block-system">
                 <div class="content">
