--- a/_posts/2014-06-09-Monday.md
+++ b/_posts/2014-06-09-Monday.md
@@ -1,14 +1,11 @@
 ---
-layout: default
+layout: post
 title: Monday, June 9, 2014
 group: "meeting note"
 ---
 <div id="content" class="column">
     <div class="section">
         <a id="main-content"></a>
-        <h1 class="title" id="page-title">
-            Monday, June 9, 2014        
-        </h1>
         <div class="region region-content">
             <div id="block-system-main" class="block block-system">
                 <div class="content">
