--- a/_posts/2014-08-18-Monday.md
+++ b/_posts/2014-08-18-Monday.md
@@ -1,15 +1,12 @@
 ---
-layout: default
+layout: post
 title: Monday, August 18, 2014
 group: "meeting note"
 ---
 
 <div id="content" class="column">
     <div class="section">
-        <a id="main-content"></a>
-        <h1 class="title" id="page-title">
-            Monday, August 18, 2014        
-        </h1>
+    <a id="main-content"></a>
         <div class="region region-content">
             <div id="block-system-main" class="block block-system">
                 <div class="content">
