More link fixes. Meeting notes look better.

--- a/_posts/2014-01-06-Monday.md
+++ b/_posts/2014-01-06-Monday.md
@@ -41,15 +41,10 @@ group: "meeting note"
                             </div>
                             <div id="book-navigation-14" class="book-navigation">
                                 <div class="page-links clearfix">
-                                    <a href="/content/monday-january-20-2014" class="page-previous" title="Go to previous page">‹ Monday, January 20, 2014</a>
-                                    <a href="/content/meeting-notes" class="page-up" title="Go to parent page">up</a>
+                                    <a href="{{site.baseurl}}/monday-january-20-2014" class="page-previous" title="Go to previous page">‹ Monday, January 20, 2014</a>
+                                    <a href="{{site.baseurl}}/meeting-notes" class="page-up" title="Go to parent page">up</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="link-wrapper">
-                            <ul class="links inline">
-                                <li class="comment_forbidden first last"><span><a href="/user/login?destination=node/22%23comment-form">Log in</a> to post comments</span></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
