--- a/_posts/2014-01-20-Monday.md
+++ b/_posts/2014-01-20-Monday.md
@@ -48,9 +48,9 @@ group: "meeting note"
                             </div>
                             <div id="book-navigation-14" class="book-navigation">
                                 <div class="page-links clearfix">
-                                    <a href="/content/monday-february-3-2014" class="page-previous" title="Go to previous page">‹ Monday, February 3, 2014</a>
-                                    <a href="/content/meeting-notes" class="page-up" title="Go to parent page">up</a>
-                                    <a href="/content/monday-january-6-2014" class="page-next" title="Go to next page">Monday, January 6, 2014 ›</a>
+                                    <a href="{{site.baseurl}}/monday-february-3-2014" class="page-previous" title="Go to previous page">‹ Monday, February 3, 2014</a>
+                                    <a href="{{site.baseurl}}/meeting-notes" class="page-up" title="Go to parent page">up</a>
+                                    <a href="{{site.baseurl}}/monday-january-6-2014" class="page-next" title="Go to next page">Monday, January 6, 2014 ›</a>
                                 </div>
                             </div>
                         </div>
