--- a/_posts/2014-02-03-Monday.md
+++ b/_posts/2014-02-03-Monday.md
@@ -59,9 +59,9 @@ group: "meeting note"
                             </div>
                             <div id="book-navigation-14" class="book-navigation">
                                 <div class="page-links clearfix">
-                                    <a href="/content/monday-march-3-2014" class="page-previous" title="Go to previous page">‹ Monday, March 3, 2014 </a>
-                                    <a href="/content/meeting-notes" class="page-up" title="Go to parent page">up</a>
-                                    <a href="/content/monday-january-20-2014" class="page-next" title="Go to next page">Monday, January 20, 2014 ›</a>
+                                    <a href="{{site.baseurl}}/monday-march-3-2014" class="page-previous" title="Go to previous page">‹ Monday, March 3, 2014 </a>
+                                    <a href="{{site.baseurl}}/meeting-notes" class="page-up" title="Go to parent page">up</a>
+                                    <a href="{{site.baseurl}}/monday-january-20-2014" class="page-next" title="Go to next page">Monday, January 20, 2014 ›</a>
                                 </div>
                             </div>
                         </div>
