--- a/_posts/2014-07-21-Monday.md
+++ b/_posts/2014-07-21-Monday.md
@@ -92,9 +92,9 @@ group: "meeting note"
                             </div>
                             <div id="book-navigation-14" class="book-navigation">
                                 <div class="page-links clearfix">
-                                    <a href="/content/monday-august-18-2014" class="page-previous" title="Go to previous page">‹ Monday, August 18, 2014</a>
-                                    <a href="/content/meeting-notes" class="page-up" title="Go to parent page">up</a>
-                                    <a href="/content/monday-july-7-2014-0" class="page-next" title="Go to next page">Monday, July 7, 2014 ›</a>
+                                    <a href="{{site.baseurl}}/monday-august-18-2014" class="page-previous" title="Go to previous page">‹ Monday, August 18, 2014</a>
+                                    <a href="{{site.baseurl}}/meeting-notes" class="page-up" title="Go to parent page">up</a>
+                                    <a href="{{site.baseurl}}/monday-july-7-2014-0" class="page-next" title="Go to next page">Monday, July 7, 2014 ›</a>
                                 </div>
                             </div>
                         </div>
