--- a/_posts/2014-08-18-Monday.md
+++ b/_posts/2014-08-18-Monday.md
@@ -66,9 +66,9 @@ group: "meeting note"
                             </div>
                             <div id="book-navigation-14" class="book-navigation">
                                 <div class="page-links clearfix">
-                                    <a href="/content/meeting-notes" class="page-previous" title="Go to previous page">‹ Meeting Notes</a>
-                                    <a href="/content/meeting-notes" class="page-up" title="Go to parent page">up</a>
-                                    <a href="/content/monday-july-21-2014" class="page-next" title="Go to next page">Monday, July 21, 2014 ›</a>
+                                    <a href="{{site.baseurl}}/meeting-notes" class="page-previous" title="Go to previous page">‹ Meeting Notes</a>
+                                    <a href="{{site.baseurl}}/meeting-notes" class="page-up" title="Go to parent page">up</a>
+                                    <a href="{{site.baseurl}}/monday-july-21-2014" class="page-next" title="Go to next page">Monday, July 21, 2014 ›</a>
                                 </div>
                             </div>
                         </div>
