--- a/_posts/2014-06-09-Monday.md
+++ b/_posts/2014-06-09-Monday.md
@@ -31,16 +31,11 @@ group: "meeting note"
                             </div>
                             <div id="book-navigation-14" class="book-navigation">
                                 <div class="page-links clearfix">
-                                    <a href="/content/monday-july-7-2014-0" class="page-previous" title="Go to previous page">‹ Monday, July 7, 2014</a>
-                                    <a href="/content/meeting-notes" class="page-up" title="Go to parent page">up</a>
-                                    <a href="/content/monday-may-26-2014" class="page-next" title="Go to next page">Monday, May 26, 2014 ›</a>
+                                    <a href="{{site.baseurl}}/monday-july-7-2014-0" class="page-previous" title="Go to previous page">‹ Monday, July 7, 2014</a>
+                                    <a href="{{site.baseurl}}/meeting-notes" class="page-up" title="Go to parent page">up</a>
+                                    <a href="{{site.baseurl}}/monday-may-26-2014" class="page-next" title="Go to next page">Monday, May 26, 2014 ›</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="link-wrapper">
-                            <ul class="links inline">
-                                <li class="comment_forbidden first last"><span><a href="/user/login?destination=node/29%23comment-form">Log in</a> to post comments</span></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
